[tool.poetry]
name = "aws-cloudwatch-log-group"
version = "0.0.3"
description = "Pulling AWS CloudWatch Log Groups"
authors = ["James Hogkinson <james@terminaloutcomes.com>"]
license = "MIT"
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.84"
mypy-boto3-logs = "^1.26.53"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.16.3"
mypy = "^1.1"
black = "^23.1.0"
pytest = "^7.2.2"
boto3-stubs = {extras = ["logs"], version = "^1.26.83"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
max-line-length=200

[tool.poetry.scripts]
aws-cloudwatch-log-group = "aws_cloudwatch_log_group.__main__:main"
