[tool.poetry]
name = "aws-cloudwatch-log-group"
version = "0.0.3"
description = "Pulling AWS CloudWatch Log Groups"
authors = ["James Hogkinson <james@terminaloutcomes.com>"]
license = "MIT"
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.8"
mypy-boto3-logs = "^1.26.149"
click = "^8.1.6"

[tool.poetry.dev-dependencies]
pylint = "^2.17.4"
mypy = "^1.4"
black = "^23.7.0"
pytest = "^7.4.0"
boto3-stubs = {extras = ["logs"], version = "^1.26.165"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
max-line-length=200

[tool.poetry.scripts]
aws-cloudwatch-log-group = "aws_cloudwatch_log_group.__main__:main"
